--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "axios": "^1.10.0",
     "framer-motion": "^12.23.0",
     "gh-pages": "^6.3.0",
+    "js-cookie": "^3.0.5",
     "react": "^19.1.0",
     "react-countup": "^6.5.3",
     "react-dom": "^19.1.0",
